Changed title and description to reflect Kollabo

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="description" content="Responsive Bootstrap Multi-Purpose Landing Page Template">
-<meta name="keywords" content="LandX, Bootstrap, Landing page, Template, Registration, Landing">
-<meta name="author" content="Mizanur Rahman">
+<meta name="description" content="Collaborative Private Placement Platform for Africa">
+<meta name="keywords" content="Invest, Africa, Funding, Deals, African Deals, Equity, Financing, Investment">
+<meta name="author" content="OfamfaLab">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 <!-- SITE TITLE -->
-<title>LandX - Responsive Multi-Purpose Landing Page</title>
+<title>Kollabo - A Specialist Investment Matching Platform for Africa</title>
 
 <!-- =========================
       FAV AND TOUCH ICONS  
@@ -380,7 +380,7 @@
 	
 	<!-- SECTION HEADING -->
 	
-	<h2>LandX Features</h2>
+	<h2>Kollabo Features</h2>
 	
 	<div class="colored-line">
 	</div>
@@ -1056,7 +1056,7 @@
 	</div>
 	
 	<div class="copyright">
-		 ©2014 LandX Template LLC.
+		 ©2015 OfamfaLab.
 	</div>
 	
 	<ul class="social-icons">
