--- a/index.html
+++ b/index.html
@@ -158,8 +158,7 @@
 			<div class="col-md-7 col-sm-7 intro-section">
 
 				<h1 class="intro text-left">
-					<strong>Get</strong> the Best <strong>Solution</strong> to Grow Business
-					<strong>Investments</strong> in Africa
+					<strong>Get</strong> the Best <strong>Solution</strong> to Grow	<strong>Quality</strong> Investments in Africa
 				</h1>
 
 				<ul class="feature-list-1">
