--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 			<div class="container">
 				
 				<div class="navbar-header">
-					<img src="images/logo.png" alt="">
+					<a href="#"><img src="images/logo.png" alt=""></a>
 				</div>
 				
 				<ul class="nav navbar-nav navbar-right social-navigation hidden-xs">
@@ -1110,7 +1110,7 @@
 <div class="container">
 	
 	<div class="footer-logo">
-		<img src="images/logo-dark.png" alt="">
+		<a href="#" h><img src="images/logo-dark.png" alt=""></a>
 	</div>
 	
 	<div class="copyright">
