replaced bg-image

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <link rel="stylesheet" href="css/nivo_themes/default/default.css">
 
     <!-- COLORS | CURRENTLY USED DIFFERENTLY TO SWITCH FOR DEMO. IN ORIGINAL FILE ALL COLORS LINK IS COMMENTED EXCEPT BLUE -->
-    <link rel="stylesheet" href="css/colors/blue.css" title="blue">
+    <link rel="stylesheet" href="css/colors/green.css" title="blue">
     <link rel="alternate stylesheet" href="css/colors/green.css" title="green" disabled="">
     <link rel="alternate stylesheet" href="css/colors/orange.css" title="orange" disabled="">
     <link rel="alternate stylesheet" href="css/colors/purple.css" title="purple" disabled="">
@@ -690,7 +690,7 @@ jQuery(window).load(function() {
 
 <!-- =========================================================
      STYLE SWITCHER | ONLY FOR DEMO NOT INCLUDED IN MAIN FILES
-============================================================== -->
+==============================================================
 <script type="text/javascript" src="demo/styleswitcher.js"></script>
 <script type="text/javascript" src="demo/demo.js"></script>
 <div class="demo-style-switch" id="switch-style">
@@ -745,6 +745,6 @@ jQuery(window).load(function() {
         </ul>
     </div>
 </div>
-
+============================================================== -->
 
 </body></html>
