--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     <!-- STYLE SWITCH STYLESHEET ONLY FOR DEMO -->
     <link rel="stylesheet" href="demo/demo.css">
 
+    <!--<link rel="stylesheet" href="css/formcolor.css">-->
 
     <!--Google Analytics -->
     <script>
@@ -118,6 +119,7 @@
                     </div>
 
                     <!-- NAVIGATION LINKS -->
+                    <!--
                     <div class="navbar-collapse collapse" id="landx-navigation">
                         <ul class="nav navbar-nav navbar-right main-navigation">
                             <li><a href="#home">Home</a></li>
@@ -126,6 +128,7 @@
                             <li><a href="#section8">Get Started</a></li>
                         </ul>
                     </div>
+                    -->
 
                 </div>
                 <!-- /END CONTAINER -->
@@ -164,76 +167,53 @@
                 <!-- LEFT - HEADING AND TEXTS -->
                 <div class="col-md-7 col-sm-7 intro-section">
 
-                    <h1 class="intro text-left">
-                        <strong>Get</strong> the Best <strong>Solution</strong> to Grow	<strong>Quality</strong> Investments in Africa
-                    </h1>
+                    <h2 class="intro text-left">
+                        Match bankable projects and businesses with potential investors
+                    </h2>
+
+                    <h3 class="intro text-left">
+                        Collaborate to get projects and businesses bankable then raise the needed private capital
+                    </h3>
 
                     <ul class="feature-list-1">
 
                         <!-- FEATURE ROW -->
                         <li>
                             <div class="icon-container pull-left">
-                                <span class="icon_check"></span>
+                                <span class=""></span>
                             </div>
                             <p class="text-left">
-                                Fully-integrated technology platform connecting a global network of investors with
-                                compelling African investment opportunities.
+                                Get help in making vetted projects and businesses bankable.
                             </p>
                         </li>
 
                         <!-- FEATURE ROW -->
                         <li>
                             <div class="icon-container pull-left">
-                                <span class="icon_check"></span>
+                                <span class=""></span>
                             </div>
                             <p class="text-left">
-                                A pioneering deal sharing and due diligence technology platform for investors to better
-                                manage investment pipelines and partner
-                                networks.
+                                Render professional advisory services in vetting and making projects and businesses bankable
                             </p>
                         </li>
 
                         <!-- FEATURE ROW -->
                         <li>
                             <div class="icon-container pull-left">
-                                <span class="icon_check"></span>
+                                <span class=""></span>
                             </div>
                             <p class="text-left">
-                                A premium network of investors with interests in Africa plus comprehensive information on
-                                their investment criteria
+                                Market bankable projects and businesses to potential investors.
                             </p>
                         </li>
 
                         <!-- FEATURE ROW -->
                         <li>
                             <div class="icon-container pull-left">
-                                <span class="icon_check"></span>
+                                <span class=""></span>
                             </div>
                             <p class="text-left">
-                                Access to quality vetted investment opportunities and a suite of intelligent tools to
-                                coordinate and evaluate transactions.
-                            </p>
-                        </li>
-
-                        <!-- FEATURE ROW -->
-                        <li>
-                            <div class="icon-container pull-left">
-                                <span class="icon_check"></span>
-                            </div>
-                            <p class="text-left">
-                                Get access to quality deal flow and accelerate your investment process with clear visibility
-                                of all stages of transactions.
-                            </p>
-                        </li>
-
-                        <!-- FEATURE ROW -->
-                        <li>
-                            <div class="icon-container pull-left">
-                                <span class="icon_check"></span>
-                            </div>
-                            <p class="text-left">
-                                Premium Advisory for creating bankable projects with quality Reports and Private Placement
-                                Memoranda (PPM) for early Expression of Interests (EOIs)
+                                Get access to quality vetted investment opportunities in Africa.
                             </p>
                         </li>
 
@@ -269,307 +249,6 @@
     </div>
 
 </header>
-
-
-<!-- =========================
-     SECTION 1
-============================== -->
-<section class="section1" id="section1">
-
-    <div class="container">
-        <div class="row">
-
-            <div class="col-md-6">
-
-                <!-- SCREENSHOT -->
-                <div class="side-screenshot pull-left">
-                    <img src="images/image-1.jpg" alt="Feature" class="img-responsive">
-                </div>
-
-            </div>
-
-            <div class="col-md-6">
-
-                <!-- DETAILS WITH LIST -->
-                <div class="brief text-left">
-
-                    <!-- HEADING -->
-                    <h2>Explore the awesomeness</h2>
-                    <div class="colored-line pull-left">
-                    </div>
-
-                    <!-- TEXT -->
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut.
-                    </p>
-
-                    <!-- FEATURE LIST -->
-                    <ul class="feature-list-2">
-
-                        <!-- FEATURE -->
-                        <li>
-                            <!-- ICON -->
-                            <div class="icon-container pull-left">
-                                <span class="icon_cog"></span>
-                            </div>
-                            <!-- DETAILS -->
-                            <div class="details pull-left">
-                                <h6>Easy to Customize</h6>
-                                <p>
-                                    Lorem lean startup ipsum product market fit customer development acquihire technical cofounder.
-                                </p>
-                            </div>
-                        </li>
-
-                        <!-- FEATURE -->
-                        <li>
-                            <!-- ICON -->
-                            <div class="icon-container pull-left">
-                                <span class="icon_cart_alt"></span>
-                            </div>
-                            <!-- DETAILS -->
-                            <div class="details pull-left">
-                                <h6>Lorem Ipsum</h6>
-                                <p>
-                                    Lorem lean startup ipsum product market fit customer development acquihire technical cofounder.
-                                </p>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div> <!-- /END DETAILS WITH LIST -->
-
-        </div> <!-- END ROW -->
-
-    </div> <!-- END CONTAINER -->
-
-</section>
-
-
-<!-- =========================
-     SECTION 2
-============================== -->
-<section class="section2 bgcolor-2" id="section2">
-    <div class="container">
-
-        <div class="row">
-
-            <div class="col-md-6">
-
-                <!-- DETAILS WITH LIST -->
-                <div class="brief text-left">
-
-                    <!-- HEADING -->
-                    <h2>Describe more about product</h2>
-                    <div class="colored-line pull-left">
-                    </div>
-
-                    <!-- TEXT -->
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut.
-                    </p>
-
-                    <!-- FEATURE LIST -->
-                    <ul class="feature-list-2">
-
-                        <!-- FEATURE -->
-                        <li>
-                            <!-- ICON -->
-                            <div class="icon-container pull-left">
-                                <span class="icon_cog"></span>
-                            </div>
-                            <!-- DETAILS -->
-                            <div class="details pull-left">
-                                <h6>Easy to Customize</h6>
-                                <p>
-                                    Lorem lean startup ipsum product market fit customer development acquihire technical cofounder.
-                                </p>
-                            </div>
-                        </li>
-
-                        <!-- FEATURE -->
-                        <li>
-                            <!-- ICON -->
-                            <div class="icon-container pull-left">
-                                <span class="icon_cart_alt"></span>
-                            </div>
-                            <!-- DETAILS -->
-                            <div class="details pull-left">
-                                <h6>Lorem Ipsum</h6>
-                                <p>
-                                    Lorem lean startup ipsum product market fit customer development acquihire technical cofounder.
-                                </p>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-
-            <div class="col-md-6">
-                <!-- SCREENSHOT -->
-                <div class="side-screenshot2 pull-right">
-                    <img src="images/image-2.jpg" alt="Feature" class="img-responsive">
-                </div>
-            </div>
-
-        </div> <!-- END ROW -->
-
-    </div> <!-- END CONTAINER -->
-
-</section>
-
-
-<!-- =========================
-     SECTION 3
-============================== -->
-<section class="section3" id="section3">
-
-    <div class="container">
-
-        <!-- SECTION HEADING -->
-
-        <h2>Kollabo Features</h2>
-
-        <div class="colored-line">
-        </div>
-
-        <div class="sub-heading">
-            Term sheet convertible note colluding bootstrapping.
-        </div>
-
-        <div class="features">
-
-            <!-- FEATURES ROW 1 -->
-            <div class="row">
-
-                <!-- SINGLE FEATURE BOX -->
-                <div class="col-md-4">
-                    <div class="feature">
-                        <div class="icon">
-                            <span class="icon_compass_alt"></span>
-                        </div>
-                        <h4>Responsive Design</h4>
-                        <p>
-                            Lorem lean startup ipsum product market fit customer development acquihire technical cofounder. User engagement.
-                        </p>
-                    </div>
-                </div>
-
-                <!-- SINGLE FEATURE BOX -->
-                <div class="col-md-4">
-                    <div class="feature">
-                        <div class="icon">
-                            <span class="icon_map_alt"></span>
-                        </div>
-                        <h4>350+ Font Icons</h4>
-                        <p>
-                            Lorem lean startup ipsum product market fit customer development acquihire technical cofounder. User engagement.
-                        </p>
-                    </div>
-                </div>
-
-                <!-- SINGLE FEATURE BOX -->
-                <div class="col-md-4">
-                    <div class="feature">
-                        <div class="icon">
-                            <span class="icon_gift_alt"></span>
-                        </div>
-                        <h4>Built with Bootstrap 3.1</h4>
-                        <p>
-                            Lorem lean startup ipsum product market fit customer development acquihire technical cofounder. User engagement.
-                        </p>
-                    </div>
-                </div>
-            </div>
-
-            <!-- FEATURES ROW 2 -->
-            <div class="row">
-
-                <!-- SINGLE FEATURE BOX -->
-                <div class="col-md-4">
-                    <div class="feature">
-                        <div class="icon">
-                            <span class="icon_adjust-vert"></span>
-                        </div>
-                        <h4>Easy to Customize</h4>
-                        <p>
-                            Lorem lean startup ipsum product market fit customer development acquihire technical cofounder. User engagement.
-                        </p>
-                    </div>
-                </div>
-
-                <!-- SINGLE FEATURE BOX -->
-                <div class="col-md-4">
-                    <div class="feature">
-                        <div class="icon">
-                            <span class="icon_tags_alt"></span>
-                        </div>
-                        <h4>Lots of Variations</h4>
-                        <p>
-                            Lorem lean startup ipsum product market fit customer development acquihire technical cofounder. User engagement.
-                        </p>
-                    </div>
-                </div>
-
-                <!-- SINGLE FEATURE BOX -->
-                <div class="col-md-4">
-                    <div class="feature">
-                        <div class="icon">
-                            <span class="icon_chat_alt"></span>
-                        </div>
-                        <h4>24/7 Chat Support</h4>
-                        <p>
-                            Lorem lean startup ipsum product market fit customer development acquihire technical cofounder. User engagement.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </div> <!-- /END CONTAINER -->
-</section>
-
-<!-- =========================
-     SECTION 8 - CTA
-============================== -->
-<section class="cta-section" id="section8">
-    <div class="color-overlay">
-
-        <div class="container">
-
-            <h4>We Are Ready to Help You</h4>
-            <h2>Get the Best Solution for your African Investment Needs</h2>
-            <div id="cta-4">
-                <a href="#home" class="btn standard-button"> Get Started</a>
-            </div>
-
-            <!-- MAILCHIMP SUBSCRIBE FORM / REMOVE 'hidden' CLASS TO MAKE FORM VISIBLE -->
-
-            <div class="subscribe-section ">
-
-                <h3>Or, Subscribe for notifications</h3>
-
-                <form action="//ofamfalab.us10.list-manage.com/subscribe/post?u=0bd450782cb956bb497e79eb6&amp;id=16bdb79a98" method="post" class="subscription-form mailchimp form-inline" role="form" novalidate="true">
-                    <!-- SUBSCRIPTION SUCCESSFUL OR ERROR MESSAGES -->
-                    <h6 class="subscription-success"></h6>
-                    <h6 class="subscription-error"></h6>
-
-                    <!-- EMAIL INPUT BOX -->
-                    <input type="email" name="EMAIL" id="subscriber-email" placeholder="Your Email" class="form-control input-box">
-                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                    <div style="position: absolute; left: -5000px;"><input type="text" name="b_0bd450782cb956bb497e79eb6_16bdb79a98" tabindex="-1" value=""></div>
-
-                    <!-- SUBSCRIBE BUTTON -->
-                    <button type="submit" id="subscribe-button" class="btn standard-button">Subscribe</button>
-
-                </form>
-            </div>
-            <!-- /END SUBSCRIPTION FORM -->
-
-        </div>  <!-- /END CONTAINER -->
-    </div>  <!-- /END COLOR OVERLAY -->
-
-</section>
 
 <!-- =========================
      SECTION 9 - CONTACT US
