--- a/index.html
+++ b/index.html
@@ -266,6 +266,30 @@
         </div>
         <!-- /END HEADING, FEATURES AND REGISTRATION FORM CONTAINER -->
 
+
+        <!-- SUBSCRIBE FORM -->
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+
+                <div class="sf-container">
+                    <form class="subscription-form mailchimp form-inline" role="form">
+
+                        <!-- SUBSCRIPTION SUCCESSFUL OR ERROR MESSAGES -->
+                        <h6 class="subscription-success"></h6>
+                        <h6 class="subscription-error"></h6>
+
+                        <!-- EMAIL INPUT BOX -->
+                        <input type="email" name="email" id="subscriber-email1" placeholder="Your Email" class="form-control input-box">
+
+                        <!-- SUBSCRIBE BUTTON -->
+                        <button type="submit" id="subscribe-button1" class="btn standard-button">GET STARTED</button>
+
+                    </form>
+                </div>
+
+            </div>
+        </div>
+
     </div>
 
 </header>
