--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html lang="en"><head>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="description" content="Collaborative Private Placement Platform for Africa">
     <meta name="keywords" content="Invest, Africa, Funding, Deals, African Deals, Equity, Financing, Investment">
@@ -32,7 +33,8 @@
 
     <!-- Elegant Icons -->
     <link rel="stylesheet" href="assets/elegant-icons/style.css">
-    <!--[if lte IE 7]><script src="assets/elegant-icons/lte-ie7.js"></script><![endif]-->
+    <!--[if lte IE 7]>
+    <script src="assets/elegant-icons/lte-ie7.js"></script><![endif]-->
 
     <!-- CAROUSEL AND LIGHTBOX -->
     <link rel="stylesheet" href="css/owl.theme.css">
@@ -68,7 +70,7 @@
     <!-- STYLE SWITCH STYLESHEET ONLY FOR DEMO -->
     <link rel="stylesheet" href="demo/demo.css">
 
-    <!--<link rel="stylesheet" href="css/formcolor.css">-->
+    <link rel="stylesheet" href="css/formcolor.css">
 
     <!--Google Analytics -->
     <script>
@@ -79,6 +81,8 @@
 
     ga('create', 'UA-59646433-3', 'auto');
     ga('send', 'pageview');
+
+
     </script>
 
 </head>
@@ -107,13 +111,14 @@
                     <div class="navbar-header">
 
                         <!-- LOGO ON STICKY NAV BAR -->
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#landx-navigation">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse"
+                                data-target="#landx-navigation">
                             <span class="sr-only">Toggle navigation</span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="#"><img src="images/logo-dark.png" alt=""></a>
+                        <a class="navbar-brand" href="#"><img src="images/new_logo.png" alt=""></a>
 
                     </div>
 
@@ -164,23 +169,20 @@
             <div class="row">
 
                 <!-- LEFT - HEADING AND TEXTS -->
-                <div class="col-md-7 col-sm-7 intro-section">
+                <div class="col-md-10 col-sm-10 intro-section">
 
                     <h1 class="intro text-left">
-                        Match bankable projects and businesses with potential investors
+                        Match bankable African projects with potential investors
                     </h1>
 
                     <h3 class="intro text-left">
-                        Collaborate to get projects and businesses bankable then raise the needed private capital
+                        A collaborative effort to ease the African private process and grow businesses
                     </h3>
 
                     <ul class="feature-list-1">
 
                         <!-- FEATURE ROW -->
                         <li>
-                            <div class="icon-container pull-left">
-                                <span class=""></span>
-                            </div>
                             <p class="text-left">
                                 Get help in making vetted projects and businesses bankable.
                             </p>
@@ -188,86 +190,56 @@
 
                         <!-- FEATURE ROW -->
                         <li>
-                            <div class="icon-container pull-left">
-                                <span class=""></span>
-                            </div>
                             <p class="text-left">
-                                Render professional advisory services in vetting and making projects and businesses bankable
+                                Raise capital for vetted projects and businesses from our network of investors
                             </p>
                         </li>
 
                         <!-- FEATURE ROW -->
                         <li>
-                            <div class="icon-container pull-left">
-                                <span class=""></span>
-                            </div>
                             <p class="text-left">
-                                Market bankable projects and businesses to potential investors.
+                                Bankers and broker dealers can simplify the capital raising process for their clients
                             </p>
                         </li>
 
                         <!-- FEATURE ROW -->
                         <li>
-                            <div class="icon-container pull-left">
-                                <span class=""></span>
-                            </div>
                             <p class="text-left">
-                                Get access to quality vetted investment opportunities in Africa.
+                                Investors can have access to vetted businesses or projects that fit their investment
+                                criteria
                             </p>
                         </li>
 
 
                     </ul>
 
-                </div>
+                    <!-- SUBSCRIBE FORM -->
+                    <div>
+                        <div class="sf-container text-left">
+                            <form class="subscription-form mailchimp form-inline" role="form">
 
-                <!-- RIGHT - REGISTRATION FORM -->
+                                <!-- SUBSCRIPTION SUCCESSFUL OR ERROR MESSAGES -->
+                                <h6 class="subscription-success"></h6>
+                                <h6 class="subscription-error"></h6>
 
-                <div class="col-md-5 col-sm-5">
+                                <!-- EMAIL INPUT BOX -->
+                                <input type="email" name="email" id="subscriber-email1" placeholder="Your Email"
+                                       class="form-control input-box">
 
-                    <div class="vertical-registration-form">
-                        <div class="colored-line">
+                                <!-- SUBSCRIBE BUTTON -->
+                                <button type="submit" id="subscribe-button1" class="btn standard-button">EARLY ACCESS INVITATION
+                                </button>
+
+                            </form>
                         </div>
-                        <h3>Try Kollabo Now </h3>
-                        <form class="registration-form" id="register" role="form" action="https://ofamfalab.us10.list-manage.com/subscribe/post?u=0bd450782cb956bb497e79eb6&amp;id=16bdb79a98" method="post" name="mc-embedded-subscribe-form" target="_blank" novalidate="">
-                            <input class="form-control input-box" id="name" type="text" name="FNAME" placeholder="Your Name">
-                            <input class="form-control input-box" id="email" type="email" name="EMAIL" placeholder="Your Email *">
-                            <input class="form-control input-box" id="phone-number" type="text" name="PHONE" placeholder="Phone Number">
-                            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                            <div style="position: absolute; left: -5000px;"><input type="text" name="b_0bd450782cb956bb497e79eb6_16bdb79a98" tabindex="-1" value=""></div>
-                            <button class="btn standard-button" type="submit" id="submit" name="submit">Get Started</button>
-                        </form>
                     </div>
+
                 </div>
-                <!-- /END - REGISTRATION FORM -->
+
             </div>
 
         </div>
         <!-- /END HEADING, FEATURES AND REGISTRATION FORM CONTAINER -->
-
-
-        <!-- SUBSCRIBE FORM -->
-        <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-
-                <div class="sf-container">
-                    <form class="subscription-form mailchimp form-inline" role="form">
-
-                        <!-- SUBSCRIPTION SUCCESSFUL OR ERROR MESSAGES -->
-                        <h6 class="subscription-success"></h6>
-                        <h6 class="subscription-error"></h6>
-
-                        <!-- EMAIL INPUT BOX -->
-                        <input type="email" name="email" id="subscriber-email1" placeholder="Your Email" class="form-control input-box">
-
-                        <!-- SUBSCRIBE BUTTON -->
-                        <button type="submit" id="subscribe-button1" class="btn standard-button">GET STARTED</button>
-
-                    </form>
-                </div>
-
-            </div>
-        </div>
 
     </div>
 
@@ -282,7 +254,7 @@
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
 
-                <h3 class="heading">Need any help? Contact us now!</h3>
+                <h3 class="heading">Want to know more? Contact us now!</h3>
 
                 <a href="" class="contact-link expand-form"><span class="icon_mail_alt"></span>Contact us now</a>
 
@@ -298,25 +270,32 @@
 
                         <!-- IF MAIL SENDING UNSUCCESSFULL -->
                         <h6 class="error">
-                            <span class="colored-text icon_error-circle_alt"></span> E-mail must be valid and message must be longer than 1 character. </h6>
+                            <span class="colored-text icon_error-circle_alt"></span> E-mail must be valid and message
+                            must be longer than 1 character. </h6>
 
                         <div class="field-wrapper col-md-6">
-                            <input class="form-control input-box" id="cf-name" type="text" name="cf-name" placeholder="Your Name">
+                            <input class="form-control input-box" id="cf-name" type="text" name="cf-name"
+                                   placeholder="Your Name">
                         </div>
 
                         <div class="field-wrapper col-md-6">
-                            <input class="form-control input-box" id="cf-email" type="email" name="cf-email" placeholder="Email">
+                            <input class="form-control input-box" id="cf-email" type="email" name="cf-email"
+                                   placeholder="Email">
                         </div>
 
                         <div class="field-wrapper col-md-12">
-                            <input class="form-control input-box" id="cf-subject" type="text" name="cf-subject" placeholder="Subject">
+                            <input class="form-control input-box" id="cf-subject" type="text" name="cf-subject"
+                                   placeholder="Subject">
                         </div>
 
                         <div class="field-wrapper col-md-12">
-                            <textarea class="form-control textarea-box" id="cf-message" rows="7" name="cf-message" placeholder="Your Message"></textarea>
+                            <textarea class="form-control textarea-box" id="cf-message" rows="7" name="cf-message"
+                                      placeholder="Your Message"></textarea>
                         </div>
 
-                        <button class="btn standard-button" type="submit" id="cf-submit" name="submit" data-style="expand-left">Send Message</button>
+                        <button class="btn standard-button" type="submit" id="cf-submit" name="submit"
+                                data-style="expand-left">Send Message
+                        </button>
                     </form>
                     <!-- /END FORM -->
                 </div>
@@ -327,31 +306,6 @@
     </div>
 
 </section>
-<!-- =========================
-     SECTION 10 - FOOTER
-============================== -->
-<footer class="bgcolor-2">
-    <div class="container">
-
-        <div class="footer-logo">
-            <a href="#" h=""><img src="images/logo-dark.png" alt=""></a>
-        </div>
-
-        <div class="copyright">
-            ©2015 OfamfaLab.
-        </div>
-
-        <ul class="social-icons">
-            <li><a href=""><span class="social_facebook_square"></span></a></li>
-            <li><a href=""><span class="social_twitter_square"></span></a></li>
-            <li><a href=""><span class="social_pinterest_square"></span></a></li>
-            <li><a href=""><span class="social_googleplus_square"></span></a></li>
-            <li><a href=""><span class="social_instagram_square"></span></a></li>
-            <li><a href=""><span class="social_linkedin_square"></span></a></li>
-        </ul>
-
-    </div>
-</footer>
 
 
 <!-- =========================
@@ -370,6 +324,8 @@ jQuery(window).load(function() {
         // will fade out the whole DIV that covers the website.
 	jQuery(".preloader").delay(1000).fadeOut("slow");
 })
+
+
 
 </script>
 
@@ -449,4 +405,5 @@ jQuery(window).load(function() {
 </div>
 ============================================================== -->
 
-</body></html>
+</body>
+</html>
