Fix mail chip redirect and Correct typos in Copy

--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@
                 <div class="col-md-10 col-sm-10 intro-section">
 
                     <h1 class="intro text-left">
-                        Match bankable African projects with potential investors
+                        Match bankable African projects and businesses with potential investors
                     </h1>
 
                     <h3 class="intro text-left">
-                        A collaborative effort to ease the African private process and grow businesses
+                        A collaborative effort to ease the African private placement process and grow businesses
                     </h3>
 
                     <ul class="feature-list-1">
@@ -221,6 +221,9 @@
                                 <!-- SUBSCRIPTION SUCCESSFUL OR ERROR MESSAGES -->
                                 <h6 class="subscription-success"></h6>
                                 <h6 class="subscription-error"></h6>
+
+                                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                                <div style="position: absolute; left: -5000px;"><input type="text" name="b_0bd450782cb956bb497e79eb6_a9f4533f14" tabindex="-1" value=""></div>
 
                                 <!-- EMAIL INPUT BOX -->
                                 <input type="email" name="email" id="subscriber-email1" placeholder="Your Email"
