--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <!-- SITE TITLE -->
-    <title>Kollabo - A Specialist Investment Matching Platform for Africa</title>
+    <title>Kollabo - Africa’s premium online platform for private placements </title>
 
     <!-- =========================
           FAV AND TOUCH ICONS
@@ -223,7 +223,7 @@
                                        class="form-control input-box">
 
                                 <!-- SUBSCRIBE BUTTON -->
-                                <button type="submit" id="subscribe-button1" class="btn standard-button">EARLY ACCESS INVITATION
+                                <button type="submit" id="subscribe-button1" class="btn standard-button">REQUEST INVITATION
                                 </button>
 
                             </form>
