Add how it works changes

--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
     <link rel="stylesheet" href="css/nivo-lightbox.css">
     <link rel="stylesheet" href="css/nivo_themes/default/default.css">
 
-    <!-- COLORS | CURRENTLY USED DIFFERENTLY TO SWITCH FOR DEMO. IN ORIGINAL FILE ALL COLORS LINK IS COMMENTED EXCEPT BLUE -->
-    <link rel="stylesheet" href="css/colors/green.css" title="blue">
-    <link rel="alternate stylesheet" href="css/colors/green.css" title="green" disabled="">
-    <link rel="alternate stylesheet" href="css/colors/orange.css" title="orange" disabled="">
-    <link rel="alternate stylesheet" href="css/colors/purple.css" title="purple" disabled="">
-    <link rel="alternate stylesheet" href="css/colors/slate.css" title="slate" disabled="">
-    <link rel="alternate stylesheet" href="css/colors/yellow.css" title="yellow" disabled="">
-    <link rel="alternate stylesheet" href="css/colors/red.css" title="red" disabled="">
-    <link rel="alternate stylesheet" href="css/colors/blue-munsell.css" title="blue-munsell" disabled="">
+    <!-- COLORS -->
+    <link rel="stylesheet" href="css/colors/green.css">
+    <!--<link rel="stylesheet" href="css/colors/blue.css"> -->
+    <!-- <link rel="stylesheet" href="css/colors/red.css"> -->
+    <!-- <link rel="stylesheet" href="css/colors/purple.css"> -->
+    <!-- <link rel="stylesheet" href="css/colors/orange.css"> -->
+    <!-- <link rel="stylesheet" href="css/colors/blue-munsell.css"> -->
+    <!-- <link rel="stylesheet" href="css/colors/slate.css"> -->
+    <!-- <link rel="stylesheet" href="css/colors/yellow.css"> -->
 
     <!-- CUSTOM STYLESHEETS -->
     <link rel="stylesheet" href="css/styles.css">
@@ -123,16 +123,18 @@
                     </div>
 
                     <!-- NAVIGATION LINKS -->
-                    <!--
+
                     <div class="navbar-collapse collapse" id="landx-navigation">
                         <ul class="nav navbar-nav navbar-right main-navigation">
                             <li><a href="#home">Home</a></li>
-                            <li><a href="#section1">Brief</a></li>
+                            <li><a href="#section2">How it works</a></li>
+                            <!--
                             <li><a href="#section3">Features</a></li>
                             <li><a href="#section8">Get Started</a></li>
+                            -->
                         </ul>
                     </div>
-                    -->
+
 
                 </div>
                 <!-- /END CONTAINER -->
@@ -240,6 +242,133 @@
     </div>
 
 </header>
+
+<section class="section2 bgcolor-2" id="section2">
+    <div class="container">
+        <div class="row">
+            <div class="brief text-left">
+                <h2>How it works</h2>
+                <div class="colored-line pull-left">
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-6">
+                <!-- DETAILS WITH LIST -->
+                <div class="brief text-left">
+                    <!-- TEXT -->
+                    <div>
+                        Kollabbo private placement platform for all offerings. We work with African businesses seeking
+                        US $500,000 to US $30 million + in equity or debt capital from investors.
+                    </div>
+
+                    <!-- FEATURE LIST -->
+                    <ul class="feature-list-2">
+
+                        <!-- FEATURE -->
+                        <li>
+                            <!-- ICON -->
+                            <div class="icon-container pull-left">
+                                <span class="ion-clipboard"></span>
+                            </div>
+                            <!-- DETAILS -->
+                            <div class="details pull-left">
+                                <h6>Apply </h6>
+
+                                <p>
+                                    We do our initial mandatory Due Diligence checks, pre-marketing of offer, prepare an
+                                    executive summary and create a draft profile.
+                                </p>
+                            </div>
+                        </li>
+
+                        <!-- FEATURE -->
+                        <li>
+                            <!-- ICON -->
+                            <div class="icon-container pull-left">
+                                <span class="ion-document-text"></span>
+                            </div>
+                            <!-- DETAILS -->
+                            <div class="details pull-left">
+                                <h6>Get Listed</h6>
+                                <p>
+                                    Execute our engagement letter to finalise your profile as VIP, Anonymous or Public.
+                                    Get listed on our platform and initiate investor marketing.
+                                </p>
+                            </div>
+                        </li>
+
+                        <li>
+                            <!-- ICON -->
+                            <div class="icon-container pull-left">
+                                <span class="icon_cart_alt"></span>
+                            </div>
+                            <!-- DETAILS -->
+                            <div class="details pull-left">
+                                <h6>Market</h6>
+
+                                <p>
+                                    Engage potential investors and with PPMs / IMs. We work with lead
+                                    advisors to answer questions and provide needed information.
+                                </p>
+                            </div>
+                        </li>
+
+                        <li>
+                            <!-- ICON -->
+                            <div class="icon-container pull-left">
+                                <span class="ion-email"></span>
+                            </div>
+                            <!-- DETAILS -->
+                            <div class="details pull-left">
+                                <h6>Engage Investor</h6>
+
+                                <p>
+                                    <i>Roadshow & Investor Due Diligence:</i>  virtual meetings, physical visits and dd with
+                                    potential accredited investors who have expressed preliminary interest after PPM /
+                                    IM review.
+                                    <br>
+                                    <i>Indications of Interest:</i>  Negotiate specific terms and conditions of final termsheet.
+                                </p>
+                            </div>
+                        </li>
+
+                        <li>
+                            <!-- ICON -->
+                            <div class="icon-container pull-left">
+                                <span class="ion-locked"></span>
+                            </div>
+                            <!-- DETAILS -->
+                            <div class="details pull-left">
+                                <h6>Close and Document</h6>
+
+                                <p>
+                                    Execute subscription and escrow agreement facilitated by Kollabbo. Funds are
+                                    transferred when target is achieved and interest (share / note) is issued to investor(s)
+                                </p>
+                            </div>
+                        </li>
+
+
+                    </ul>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <!-- SCREENSHOT -->
+                <div class="side-screenshot2 pull-right">
+                    <img src="images/how-it-works.jpg" alt="How it works" class="img-responsive">
+                </div>
+            </div>
+
+        </div>
+        <!-- END ROW -->
+
+    </div>
+    <!-- END CONTAINER -->
+
+</section>
 
 <!-- =========================
      SECTION 9 - CONTACT US
